#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.17.* UPDATES
--------------------------------------------------------------------------------
10: Added a fasta-index dependency to avoid crashes in case fasta index was not created before stats are calculated
9: Fixed hard-coded link to docker container in Module 3 (r-gbs)
8: Special case caught, in case a reference aligned bam is empty
7: Flanking sites from individual alignments are now extracted
6: Input bug in the preparesamplesheet.R script fixed (tab-delimited input enforced)
5: Removed for the time-being the R2 reads from raw-read FastQC, due to some bug in function.
4: Created functions to handle individual fastq files in FastQC report
3: Variant Calling report added
2: Added a server-small config to downscale the server requirements for smaller projects
1: Define a TMPDIR for the create vertical ref rules, as it seems to crash for large datasets when the system default tmp folder is small

Previous updates
--------------------------------------------------------------------------------
0.16.1: * Small path adjustments
0.16  : * New release with previous changes
0.15.9: * Added the callvariants rule
0.15.8: * Added the readalignment rule
0.15.7: * Exception catching added for QC-Report block "qualityValueDistribution {Concatenated,Trimmed} data"
0.15.6: * Bugfixes and restructing of the script-files
REVERSED!!! 0.15.5: * config and server config files are now taken from bash call and do not need to be specified again in the config file itself 
0.15.4: * Changed final Report also to modules that can be reused from other pipelines
0.15.3: * Dedicated QC report added for the QC rule
0.15.2: * Added the barcodes file as a dependency for rules that need it, otherwise the pipeline ran into a missing file error.