@@ -15,61 +15,78 @@ __default__:
 ################################################################################
 
 star_create_index:
-    time: 05:00:00
     job-name:  Create-StarIndex
+    time: 05:00:00
     cpus-per-task: 20
     mem-per-cpu: 4000
 
 Concatenate_lanes:
-    time: 01:00:00
     job-name: Concatenate_lanes
-  
+    time: 01:00:00
+    cpus-per-task: 1
+    mem-per-cpu: 4000
+
 bwa_create_index:
-    time: 05:00:00
     job-name:  Create-bwaIndex
+    time: 05:00:00
+    cpus-per-task: 1
     mem-per-cpu: 50000
 
 IndexMockReferenceBWA:
-    time: 02:00:00
     job-name:  IndexMockRefGenome_BWA
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
     
 IndexMockReferenceSamtools:
-    time: 02:00:00
     job-name:  IndexMockRefGenome_Samtools
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
 
 IndexClustersBWA:
-    time: 02:00:00
     job-name:  IndexMockRefClusters_BWA
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
 
 IndexClustersSamtools:
-    time: 02:00:00
     job-name:  IndexMockRefClusters_Samtools
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
 
 IndexFinalMockBWA:
-    time: 02:00:00
     job-name:  IndexFinalMockBWA
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
 
 IndexFinalMockSamtools:
-    time: 02:00:00
     job-name:  IndexFinalMockSamtools
+    time: 02:00:00
+    cpus-per-task: 1
     mem-per-cpu: 25000
+
+R_createBarcodesID_file:
+    job-name: R_createBarcodesID_file
+    time: 00:00:10
+    cpus-per-task: 1
+    mem-per-cpu: 4000
 
 # Module 1 - QC:
 ################################################################################
-fastqc_quality_control_raw_data:
+fastqc_quality_control_raw_data_r1:
     time: 05:00:00
     job-name: fastqc-raw
     cpus-per-task: 20
-
-multiqc_quality_control_raw_data:
+    mem-per-cpu: 4000
+    
+multiqc_quality_control_raw_data_r1:
     time: 05:00:00
     job-name: multiqc-raw
     mem-per-cpu: 32000
+    cpus-per-task: 1
     nvme: 10
 
 qualDist_raw_data:
